--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:linux": "electron-vite build && electron-builder --linux --config"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
     "@uiw/codemirror-extensions-langs": "^4.21.2",
@@ -28,10 +29,12 @@
     "@uiw/react-codemirror": "^4.21.2",
     "autoprefixer": "^10.4.14",
     "electron-updater": "^5.3.0",
-    "fs": "^0.0.1-security",
+    "js-beautify": "^1.14.8",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.24",
     "react-collapse": "^5.1.1",
     "react-p5": "^1.3.35",
+    "react-router-dom": "^6.14.0",
     "split-pane-react": "^0.1.3",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2"
@@ -39,7 +42,7 @@
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
-    "@types/node": "^18.16.16",
+    "@types/node": "^18.16.18",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
